# local-rag

./: .dockerignore  .gitignore  DEV.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
app/: settings.py
app/api/: main.py  middleware.py  routes.py  schemas.py
app/core/: ingestor.py  llm_client.py  llm_helpers.py  prompts.py  vectorstore.py
app/utils/: callbacks.py  utils.py
tests/api/: test_chat_sse_contract.py  test_documents_sync_security.py  test_smoke.py
ui/: models.py  streamlit_app.py
ui/components/: chat.py  document_portal.py  sidebar.py  startup.py
ui/pages/: 1_Chat.py  2_Documents.py
ui/utils/: exceptions.py  session_state.py  title.py
