[project]
name = "local-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "instructor>=1.10.0",
    "markitdown[docx,pdf]>=0.1.4",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "semantic-text-splitter>=0.27.0",
    "streamlit>=1.47.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
]
